--- a/style.css
+++ b/style.css
@@ -1,187 +1,165 @@
 * {
-    margin: o;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 body {
     font-family: Roboto;
+    min-height: 100%;
+
 }
 
 header {
-    background-color: #1f2937;
-    color: white;
     display: flex;
-    padding: 1rem 10%;
-    justify-content: space-between;
     align-items: center;
-}
-
-header .logo {
-    font-size: 24px;
+    justify-content: space-between;
+    padding: 16px 10%; 
+    background-color: #1f2937;
     color: #f9faf8;
-    font-weight: bold;
 }
 
+.logo {
+    font-size: 24px;
+    font-weight: 900;
+}
 
 ul {
-display: flex; 
-gap: 10px;
-margin: 0;
-padding: 0;
-list-style-type: none;
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
 }
 
 a {
     text-decoration: none;
-color: white;
-margin-left: 1.5rem;
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
+img{ 
+    height: 200px;
+    width:300px;
+    padding: 20px;
+    border-radius: 23px;
 
-
-
-img {
-    height: 100px;
-    width: 100px;
 }
 
-.hero { 
- background-color: #1f2937;
- color: white;
- padding: 5rem 10%;
- display: flex;
- justify-content: space-between;
- align-items: center;
- gap: 2rem;
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 16px 10%;
+    background-color:#1f2937 ;
+
 }
 
 .hero-content {
     max-width: 50%;
+    padding: 20px;
 }
 
-.hero h1 {
+h1 {
     font-size: 48px;
     font-weight: 900;
-    margin-bottom: 1rem;
+    color:#f9faf8;
 }
 
-.hero p {
+p {
+    color:#e5e7eb; 
     font-size: 18px;
-    color: #e5e7eb;
-    margin-bottom: 1.5rem;
+    padding-bottom: 10px;
 }
 
-.hero-img {
-    background-color: #6d747d;
-    width: 50%;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #e5e7eb;
+.info img {
+    width: 100%;
+    height: 150px;
+    border-radius: 23px;
+    
 }
 
-.info {
-    text-align: center;
-    padding: 5rem 10%;
-}
-
-.info h2 {
+.title {
     font-size: 36px;
     font-weight: 900;
     color: #1f2937;
-    margin-bottom: 3rem;
+    text-align: center;
+    padding: 16px 10%;
+    margin-top: 32px;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    gap: 52px;
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+  padding: 10px 10%;
+  margin-bottom: 100px;
 }
 
-.card {
-    width: 150px;
-    text-align: center;
-}
 
-.card-img {
-    width: 100%;
-    height: 150px;
-    border: 3px solid #3882f6;
-    border-radius: 10px;
-    margin-bottom: 0.5rem;
+.info {
+    max-width: 200px;
 }
-
-.card p {
-    color: #6d747d;
-    font-size: 0.9rem;
-}
-
 
 .quote {
     background-color: #e5e7eb;
-    padding: 5rem 15%;
     text-align: center;
+    padding: 60px 15%;
 }
 
 .quote blockquote p {
-    font-size: 1.5rem;
-    font-style: italic;
     color: #1f2937;
-    margin-bottom: 1rem;
-
+    font-size: 36px;
+    font-style: italic;
 }
 
 .quote cite {
     display: block;
     text-align: right;
-    font-size: 1.2rem;
-    font-weight: bold;
     color: #1f2937;
+    font-weight: 900;
 }
 
 .cta {
-    padding: 3rem 10%;
+    padding: 60px 10%; 
 }
+
 .cta-box {
-    background-color: #3882f6;
-    padding: 2rem 3rem;
-    border-radius: 10px;
+    background-color: blue;
+    padding: 60px 10%; 
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    color: white;
+  
 }
 
-.cta-text h3 {
-font-size: 1.5rem;
-margin-bottom: 0.5rem;
-}
-
-.cta-text p {
-    font-size: 1rem;
+h3 {
     color: #e5e7eb;
+    font-weight: 900;
+margin-bottom: 10px;
+}
+
+.cta p {
+    font-size:20px ;
 }
 
 .cta-button {
-    background-color: #3882f6;
+    background-color: blue;
     color: white;
-    padding: 0.5rem 2rem;
-    border-radius: 5px;
-    font-size: 1rem;
+    padding: 10px 5%;
+    border-radius: 6px;
+    border: 2px solid white;
     cursor: pointer;
+    margin-left: auto;
 }
 
 .cta-button:hover {
     background-color: white;
-    color: #3882f6;
+    color: blue;
 }
 
-footer p {
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #1f2937;
     color: #f9faf8;
+    padding: 40px;
 }
