--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ p {
 
 .info img {
     width: 100%;
-    height: 150px;
+    height: 250px;
     border-radius: 23px;
     
 }
@@ -95,7 +95,12 @@ p {
 
 
 .info {
+  
     max-width: 200px;
+}
+
+.text {
+    text-align: center;
 }
 
 .quote {
